--- a/.github/workflows/canaan-status-check-1605-uzt-v2.yml
+++ b/.github/workflows/canaan-status-check-1605-uzt-v2.yml
@@ -9,7 +9,8 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-            - name: Check Zendesk agent status
+      - name: Check Zendesk agent status
+        shell: bash
         run: |
           set -e
 
