--- a/.github/workflows/canaan-status-check-1605-uzt-v2.yml
+++ b/.github/workflows/canaan-status-check-1605-uzt-v2.yml
@@ -36,4 +36,187 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y jq
 
-      - name: Check Zendesk + AVOXI and noti
+      - name: Check Zendesk + AVOXI and notify via Telegram if needed
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          echo "UTC time now: $(date -u)"
+          echo "Runner local time: $(date)"
+
+          AGENTS_JSON='[
+            {
+              "name": "Tommy",
+              "zendesk_email": "tommymarshmallow0@gmail.com",
+              "avoxi_id": 112,
+              "telegram": "@TommyAndersonn"
+            },
+            {
+              "name": "Mark",
+              "zendesk_email": "asadbekbiznessman@gmail.com",
+              "avoxi_id": 111,
+              "telegram": "@AsadbekAbduraimov"
+            }
+          ]'
+
+          url_encode() {
+            python3 - <<'PY' "$1"
+          import sys, urllib.parse
+          print(urllib.parse.quote(sys.argv[1], safe=""))
+          PY
+          }
+
+          telegram_send() {
+            local text="$1"
+            curl -sS -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+              -d "chat_id=${TELEGRAM_CHAT_ID}" \
+              -d "text=${text}" \
+              -d "disable_web_page_preview=true" >/dev/null
+          }
+
+          zendesk_auth_header() {
+            local user="${ZENDESK_EMAIL}/token"
+            local pass="${ZENDESK_API_TOKEN}"
+            printf '%s' "${user}:${pass}" | base64 -w 0
+          }
+
+          http_get_json() {
+            local url="$1"; shift
+            local tmp
+            tmp="$(mktemp)"
+            local code
+            code="$(curl -sS -o "$tmp" -w "%{http_code}" "$url" "$@")" || true
+            echo "$code|$tmp"
+          }
+
+          check_zendesk_ready() {
+            local email="$1"
+            local q
+            q="$(url_encode "type:user email:${email}")"
+
+            local base="https://${ZENDESK_SUBDOMAIN}.zendesk.com/api/v2"
+            local auth_b64
+            auth_b64="$(zendesk_auth_header)"
+
+            local res1 code1 file1
+            res1="$(http_get_json "${base}/users/search.json?query=${q}" -H "Authorization: Basic ${auth_b64}")"
+            code1="${res1%%|*}"
+            file1="${res1#*|}"
+
+            if [[ "$code1" != "200" ]]; then
+              rm -f "$file1"
+              echo "NOT_READY|Zendesk API error (${code1})"
+              return 0
+            fi
+
+            local user_id
+            user_id="$(jq -r '.users[0].id // empty' "$file1")"
+            rm -f "$file1"
+
+            if [[ -z "${user_id}" ]]; then
+              echo "NOT_READY|Zendesk user not found"
+              return 0
+            fi
+
+            local res2 code2 file2
+            res2="$(http_get_json "${base}/users/${user_id}.json" -H "Authorization: Basic ${auth_b64}")"
+            code2="${res2%%|*}"
+            file2="${res2#*|}"
+
+            if [[ "$code2" != "200" ]]; then
+              rm -f "$file2"
+              echo "NOT_READY|Zendesk user fetch error (${code2})"
+              return 0
+            fi
+
+            local last_login
+            last_login="$(jq -r '.user.last_login_at // empty' "$file2")"
+            rm -f "$file2"
+
+            if [[ -z "${last_login}" || "${last_login}" == "null" ]]; then
+              echo "NOT_READY|No last_login_at"
+              return 0
+            fi
+
+            local now_epoch login_epoch diff_min window_min
+            now_epoch="$(date -u +%s)"
+            login_epoch="$(date -u -d "${last_login}" +%s 2>/dev/null || echo 0)"
+
+            if [[ "$login_epoch" -le 0 ]]; then
+              echo "NOT_READY|Invalid last_login_at"
+              return 0
+            fi
+
+            diff_min=$(( (now_epoch - login_epoch) / 60 ))
+            window_min="${ZENDESK_ONLINE_WINDOW_MINUTES}"
+
+            if [[ "$diff_min" -le "$window_min" ]]; then
+              echo "READY|Last login ${diff_min}m ago"
+            else
+              echo "NOT_READY|Last login ${diff_min}m ago"
+            fi
+          }
+
+          # NOTE: These are still your extensions in the UI.
+          # Later we will replace with real AVOXI agent IDs.
+          check_avoxi_ready() {
+            local agent_id="$1"
+            local token="${AVOXI_API_TOKEN}"
+            local base="${AVOXI_BASE_URL}"
+
+            local res code file
+            res="$(http_get_json "${base}/agents/${agent_id}/presence" \
+              -H "Authorization: Bearer ${token}" \
+              -H "Accept: application/json")"
+            code="${res%%|*}"
+            file="${res#*|}"
+
+            if [[ "$code" != "200" ]]; then
+              rm -f "$file"
+              echo "NOT_READY|AVOXI API error (${code})"
+              return 0
+            fi
+
+            local presence
+            presence="$(jq -r '.presence // empty' "$file")"
+            rm -f "$file"
+
+            if [[ -z "$presence" ]]; then
+              echo "NOT_READY|Unknown presence"
+              return 0
+            fi
+
+            local p
+            p="$(tr '[:upper:]' '[:lower:]' <<<"$presence")"
+
+            if [[ "$p" == "available" || "$p" == "ready" ]]; then
+              echo "READY|${presence}"
+            else
+              echo "NOT_READY|${presence}"
+            fi
+          }
+
+          total_agents="$(jq 'length' <<<"$AGENTS_JSON")"
+          for i in $(seq 0 $((total_agents - 1))); do
+            name="$(jq -r ".[$i].name" <<<"$AGENTS_JSON")"
+            zendesk_email="$(jq -r ".[$i].zendesk_email" <<<"$AGENTS_JSON")"
+            avoxi_id="$(jq -r ".[$i].avoxi_id" <<<"$AGENTS_JSON")"
+            tg="$(jq -r ".[$i].telegram" <<<"$AGENTS_JSON")"
+
+            z_out="$(check_zendesk_ready "$zendesk_email")"
+            a_out="$(check_avoxi_ready "$avoxi_id")"
+
+            z_state="${z_out%%|*}"
+            z_note="${z_out#*|}"
+            a_state="${a_out%%|*}"
+            a_note="${a_out#*|}"
+
+            echo "Agent: ${name} | Zendesk: ${z_state} (${z_note}) | AVOXI: ${a_state} (${a_note})"
+
+            if [[ "$z_state" != "READY" || "$a_state" != "READY" ]]; then
+              msg="⚠️ 16:05 UZT readiness check\n${tg}\nPlease set your status to Ready.\nZendesk: ${z_state}\nAVOXI: ${a_state}"
+              telegram_send "$msg"
+            fi
+          done
+
+          echo "Done."
