--- a/.github/workflows/canaan-status-check-1605-uzt-v2.yml
+++ b/.github/workflows/canaan-status-check-1605-uzt-v2.yml
@@ -21,16 +21,15 @@ jobs:
       ZENDESK_API_TOKEN: ${{ secrets.ZENDESK_API_TOKEN }}
       ZENDESK_SUBDOMAIN: "rainpointonline"
 
-      # AVOXI (Genius cluster)
+      # AVOXI (your correct API server from screenshot)
       AVOXI_API_TOKEN: ${{ secrets.AVOXI_API_TOKEN }}
       AVOXI_BASE_URL: "https://genius.avoxi.com/api/v2"
 
-      # Zendesk “online” heuristic window in minutes
+      # Zendesk “online” heuristic window in minutes (adjust if needed)
       ZENDESK_ONLINE_WINDOW_MINUTES: "180"
 
     steps:
       - name: Install jq
-        shell: bash
         run: |
           set -e
           sudo apt-get update -y
@@ -41,9 +40,9 @@ jobs:
         run: |
           set -euo pipefail
 
-          echo "UTC time now: $(date -u)"
-          echo "Runner local time: $(date)"
-
+          # ----------------------------
+          # Agents for the 16:00 shift
+          # ----------------------------
           AGENTS_JSON='[
             {
               "name": "Tommy",
@@ -59,6 +58,9 @@ jobs:
             }
           ]'
 
+          # ----------------------------
+          # Helpers
+          # ----------------------------
           url_encode() {
             python3 - <<'PY' "$1"
           import sys, urllib.parse
@@ -75,12 +77,14 @@ jobs:
           }
 
           zendesk_auth_header() {
+            # Zendesk API: basic auth with "email/token" + api_token
             local user="${ZENDESK_EMAIL}/token"
             local pass="${ZENDESK_API_TOKEN}"
             printf '%s' "${user}:${pass}" | base64 -w 0
           }
 
           http_get_json() {
+            # Usage: http_get_json "url" "headerName: headerValue" ...
             local url="$1"; shift
             local tmp
             tmp="$(mktemp)"
@@ -89,6 +93,10 @@ jobs:
             echo "$code|$tmp"
           }
 
+          # ----------------------------
+          # Zendesk: “online” heuristic via last_login_at
+          # READY if last_login_at within ZENDESK_ONLINE_WINDOW_MINUTES
+          # ----------------------------
           check_zendesk_ready() {
             local email="$1"
             local q
@@ -98,6 +106,7 @@ jobs:
             local auth_b64
             auth_b64="$(zendesk_auth_header)"
 
+            # 1) Find user id
             local res1 code1 file1
             res1="$(http_get_json "${base}/users/search.json?query=${q}" -H "Authorization: Basic ${auth_b64}")"
             code1="${res1%%|*}"
@@ -118,6 +127,7 @@ jobs:
               return 0
             fi
 
+            # 2) Read last_login_at
             local res2 code2 file2
             res2="$(http_get_json "${base}/users/${user_id}.json" -H "Authorization: Basic ${auth_b64}")"
             code2="${res2%%|*}"
@@ -157,45 +167,81 @@ jobs:
             fi
           }
 
-          # NOTE: These are still your extensions in the UI.
-          # Later we will replace with real AVOXI agent IDs.
+          # ----------------------------
+          # AVOXI: availability check (Genius cluster)
+          # READY if status contains “available” or “ready” (case-insensitive)
+          # ----------------------------
           check_avoxi_ready() {
             local agent_id="$1"
             local token="${AVOXI_API_TOKEN}"
             local base="${AVOXI_BASE_URL}"
 
-            local res code file
-            res="$(http_get_json "${base}/agents/${agent_id}/presence" \
-              -H "Authorization: Bearer ${token}" \
-              -H "Accept: application/json")"
-            code="${res%%|*}"
-            file="${res#*|}"
+            # Try a few likely endpoints under /api/v2
+            local endpoints=(
+              "${base}/agents/${agent_id}"
+              "${base}/agents/${agent_id}/status"
+              "${base}/agents/${agent_id}/availability"
+              "${base}/users/${agent_id}"
+              "${base}/users/${agent_id}/status"
+            )
 
-            if [[ "$code" != "200" ]]; then
+            local code file payload found="false"
+            for ep in "${endpoints[@]}"; do
+              local res
+              res="$(http_get_json "$ep" -H "Authorization: Bearer ${token}" -H "Accept: application/json")"
+              code="${res%%|*}"
+              file="${res#*|}"
+
+              if [[ "$code" == "200" ]]; then
+                payload="$(cat "$file")"
+                rm -f "$file"
+                found="true"
+                break
+              fi
               rm -f "$file"
-              echo "NOT_READY|AVOXI API error (${code})"
+            done
+
+            if [[ "$found" != "true" ]]; then
+              echo "NOT_READY|AVOXI API error (no 200 response)"
               return 0
             fi
 
-            local presence
-            presence="$(jq -r '.presence // empty' "$file")"
-            rm -f "$file"
+            # Extract the most likely status/availability field from different payload shapes
+            local status
+            status="$(jq -r '
+              [
+                .status,
+                .availability,
+                .state,
+                .agent_status,
+                .presence,
+                .data.status,
+                .data.availability,
+                .data.state,
+                .data.agent_status,
+                .data.presence
+              ]
+              | map(select(. != null and . != "")) | .[0] // ""
+            ' <<<"$payload" 2>/dev/null || echo "")"
 
-            if [[ -z "$presence" ]]; then
-              echo "NOT_READY|Unknown presence"
+            if [[ -z "$status" ]]; then
+              echo "NOT_READY|Unknown AVOXI payload"
               return 0
             fi
 
-            local p
-            p="$(tr '[:upper:]' '[:lower:]' <<<"$presence")"
+            local s
+            s="$(tr '[:upper:]' '[:lower:]' <<<"$status")"
 
-            if [[ "$p" == "available" || "$p" == "ready" ]]; then
-              echo "READY|${presence}"
+            if [[ "$s" == *"available"* || "$s" == *"ready"* ]]; then
+              echo "READY|${status}"
             else
-              echo "NOT_READY|${presence}"
+              echo "NOT_READY|${status}"
             fi
           }
 
+          # ----------------------------
+          # Main loop: one message per agent, only if needed
+          # ----------------------------
           total_agents="$(jq 'length' <<<"$AGENTS_JSON")"
           for i in $(seq 0 $((total_agents - 1))); do
             name="$(jq -r ".[$i].name" <<<"$AGENTS_JSON")"
