--- a/.github/workflows/canaan-status-check-1605-uzt-v2.yml
+++ b/.github/workflows/canaan-status-check-1605-uzt-v2.yml
@@ -21,15 +21,16 @@ jobs:
       ZENDESK_API_TOKEN: ${{ secrets.ZENDESK_API_TOKEN }}
       ZENDESK_SUBDOMAIN: "rainpointonline"
 
-      # AVOXI (your correct API server from screenshot)
+      # AVOXI (Genius cluster)
       AVOXI_API_TOKEN: ${{ secrets.AVOXI_API_TOKEN }}
       AVOXI_BASE_URL: "https://genius.avoxi.com/api/v2"
 
-      # Zendesk “online” heuristic window in minutes (adjust if needed)
+      # Zendesk “online” heuristic window in minutes
       ZENDESK_ONLINE_WINDOW_MINUTES: "180"
 
     steps:
       - name: Install jq
+        shell: bash
         run: |
           set -e
           sudo apt-get update -y
@@ -40,9 +41,9 @@ jobs:
         run: |
           set -euo pipefail
 
-          # ----------------------------
-          # Agents for the 16:00 shift
-          # ----------------------------
+          echo "UTC time now: $(date -u)"
+          echo "Runner local time: $(date)"
+
           AGENTS_JSON='[
             {
               "name": "Tommy",
@@ -58,9 +59,6 @@ jobs:
             }
           ]'
 
-          # ----------------------------
-          # Helpers
-          # ----------------------------
           url_encode() {
             python3 - <<'PY' "$1"
           import sys, urllib.parse
@@ -77,14 +75,12 @@ jobs:
           }
 
           zendesk_auth_header() {
-            # Zendesk API: basic auth with "email/token" + api_token
             local user="${ZENDESK_EMAIL}/token"
             local pass="${ZENDESK_API_TOKEN}"
             printf '%s' "${user}:${pass}" | base64 -w 0
           }
 
           http_get_json() {
-            # Usage: http_get_json "url" "headerName: headerValue" ...
             local url="$1"; shift
             local tmp
             tmp="$(mktemp)"
@@ -93,10 +89,6 @@ jobs:
             echo "$code|$tmp"
           }
 
-          # ----------------------------
-          # Zendesk: “online” heuristic via last_login_at
-          # READY if last_login_at within ZENDESK_ONLINE_WINDOW_MINUTES
-          # ----------------------------
           check_zendesk_ready() {
             local email="$1"
             local q
@@ -106,7 +98,6 @@ jobs:
             local auth_b64
             auth_b64="$(zendesk_auth_header)"
 
-            # 1) Find user id
             local res1 code1 file1
             res1="$(http_get_json "${base}/users/search.json?query=${q}" -H "Authorization: Basic ${auth_b64}")"
             code1="${res1%%|*}"
@@ -127,7 +118,6 @@ jobs:
               return 0
             fi
 
-            # 2) Read last_login_at
             local res2 code2 file2
             res2="$(http_get_json "${base}/users/${user_id}.json" -H "Authorization: Basic ${auth_b64}")"
             code2="${res2%%|*}"
@@ -167,81 +157,43 @@ jobs:
             fi
           }
 
-          # ----------------------------
-          # AVOXI: availability check (Genius cluster)
-          # READY if status contains “available” or “ready” (case-insensitive)
-          # ----------------------------
           check_avoxi_ready() {
             local agent_id="$1"
             local token="${AVOXI_API_TOKEN}"
             local base="${AVOXI_BASE_URL}"
 
-            # Try a few likely endpoints under /api/v2
-            local endpoints=(
-              "${base}/agents/${agent_id}"
-              "${base}/agents/${agent_id}/status"
-              "${base}/agents/${agent_id}/availability"
-              "${base}/users/${agent_id}"
-              "${base}/users/${agent_id}/status"
-            )
+            local res code file
+            res="$(http_get_json "${base}/agents/${agent_id}/presence" \
+              -H "Authorization: Bearer ${token}" \
+              -H "Accept: application/json")"
+            code="${res%%|*}"
+            file="${res#*|}"
 
-            local code file payload found="false"
-            for ep in "${endpoints[@]}"; do
-              local res
-              res="$(http_get_json "$ep" -H "Authorization: Bearer ${token}" -H "Accept: application/json")"
-              code="${res%%|*}"
-              file="${res#*|}"
-
-              if [[ "$code" == "200" ]]; then
-                payload="$(cat "$file")"
-                rm -f "$file"
-                found="true"
-                break
-              fi
+            if [[ "$code" != "200" ]]; then
               rm -f "$file"
-            done
-
-            if [[ "$found" != "true" ]]; then
-              echo "NOT_READY|AVOXI API error (no 200 response)"
+              echo "NOT_READY|AVOXI API error (${code})"
               return 0
             fi
 
-            # Extract the most likely status/availability field from different payload shapes
-            local status
-            status="$(jq -r '
-              [
-                .status,
-                .availability,
-                .state,
-                .agent_status,
-                .presence,
-                .data.status,
-                .data.availability,
-                .data.state,
-                .data.agent_status,
-                .data.presence
-              ]
-              | map(select(. != null and . != "")) | .[0] // ""
-            ' <<<"$payload" 2>/dev/null || echo "")"
+            local presence
+            presence="$(jq -r '.presence // empty' "$file")"
+            rm -f "$file"
 
-            if [[ -z "$status" ]]; then
-              echo "NOT_READY|Unknown AVOXI payload"
+            if [[ -z "$presence" ]]; then
+              echo "NOT_READY|Unknown presence"
               return 0
             fi
 
-            local s
-            s="$(tr '[:upper:]' '[:lower:]' <<<"$status")"
+            local p
+            p="$(tr '[:upper:]' '[:lower:]' <<<"$presence")"
 
-            if [[ "$s" == *"available"* || "$s" == *"ready"* ]]; then
-              echo "READY|${status}"
+            if [[ "$p" == "available" || "$p" == "ready" ]]; then
+              echo "READY|${presence}"
             else
-              echo "NOT_READY|${status}"
+              echo "NOT_READY|${presence}"
             fi
           }
 
-          # ----------------------------
-          # Main loop: one message per agent, only if needed
-          # ----------------------------
           total_agents="$(jq 'length' <<<"$AGENTS_JSON")"
           for i in $(seq 0 $((total_agents - 1))); do
             name="$(jq -r ".[$i].name" <<<"$AGENTS_JSON")"
